요주의 식물 리스트 기능 구현, 패키지 구조 수정, 테스트 코드 수정